--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="textt">Loading...</div>
-        <div class="owner"><P> Akh</P></div>
+        <div class="owner"><P>Owner Akh</P></div>
     </div>
 </body>
 </html>
